--- a/app/src/main/res/layout/activity_consulta.xml
+++ b/app/src/main/res/layout/activity_consulta.xml
@@ -70,4 +70,45 @@
     android:paddingBottom="10dp"
     android:layout_height="wrap_content">
 </TextView>
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="25dp"
+        app:fab_addButtonColorNormal="@color/brown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.982"
+        tools:ignore="MissingConstraints">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/uno"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/brown"
+            app:fab_icon="@drawable/ic_search"
+            app:fab_title="salir" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/dos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/green"
+            app:fab_icon="@drawable/ic_search"
+            app:fab_title="autor" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/tres"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#2196F3"
+            app:fab_icon="@drawable/cancel"
+            app:fab_title="retornar" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </LinearLayout>
