--- a/app/src/main/res/layout/activity_consulta.xml
+++ b/app/src/main/res/layout/activity_consulta.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,75 +9,79 @@
     android:background="@drawable/fondo1"
     tools:context=".activity_consulta">
 
-    <TextView
-        android:layout_width="228dp"
-        android:layout_height="37dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="20dp"
-        android:text="Seleccione una Opción"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold"></TextView>
-
-    <Spinner
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:id="@+id/spinn"
-        android:spinnerMode="dropdown"
-        android:padding="15dp"
-        android:drawSelectorOnTop="true"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </Spinner>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/codg"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:paddingTop="30dp"
-        android:layout_width="match_parent"
-        android:text="Código"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:paddingBottom="10dp"
-        android:layout_height="wrap_content">
-    </TextView>
+        <TextView
+            android:layout_width="228dp"
+            android:layout_height="37dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="20dp"
+            android:text="Seleccione una Opción"
+            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textStyle="bold"></TextView>
 
-    <TextView
-        android:id="@+id/descripc"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:paddingTop="10dp"
-        android:layout_width="match_parent"
-        android:text="Descripción"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:paddingBottom="10dp"
-        android:layout_height="wrap_content">
-    </TextView>
+        <Spinner
+            android:id="@+id/spinn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:drawSelectorOnTop="true"
+            android:padding="15dp"
+            android:spinnerMode="dropdown"></Spinner>
 
-    <TextView
-     android:id="@+id/pin"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-    android:paddingTop="10dp"
-    android:layout_width="match_parent"
-    android:text="Precio"
-    android:textColor="#000000"
-    android:textStyle="bold"
-    android:paddingBottom="10dp"
-    android:layout_height="wrap_content">
-</TextView>
+        <TextView
+            android:id="@+id/codg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:paddingTop="30dp"
+            android:paddingBottom="10dp"
+            android:text="Código"
+            android:textColor="#000000"
+            android:textStyle="bold"></TextView>
+
+        <TextView
+            android:id="@+id/descripc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="Descripción"
+            android:textColor="#000000"
+            android:textStyle="bold"></TextView>
+
+        <TextView
+            android:id="@+id/pin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="Precio"
+            android:textColor="#000000"
+            android:textStyle="bold"></TextView>
+
+    </LinearLayout>
+
     <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="692dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="25dp"
-        app:fab_addButtonColorNormal="@color/brown"
+        app:fab_addButtonColorNormal="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -90,25 +94,27 @@
             android:id="@+id/uno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_colorNormal="@color/brown"
-            app:fab_icon="@drawable/ic_search"
+            app:fab_colorNormal="@color/colorPrimary"
+            app:fab_icon="@drawable/cancel"
             app:fab_title="salir" />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/dos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_colorNormal="@color/green"
-            app:fab_icon="@drawable/ic_search"
+            app:fab_colorNormal="@color/colorPrimary"
+            app:fab_icon="@drawable/cancel"
             app:fab_title="autor" />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/tres"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_colorNormal="#2196F3"
+            app:fab_colorNormal="#304FFE"
             app:fab_icon="@drawable/cancel"
             app:fab_title="retornar" />
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
-</LinearLayout>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
