--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,86 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="match_parent"
             android:background="#304FFE"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </com.google.android.material.appbar.AppBarLayout>
+
     <include layout="@layout/content_main" />
-    <!--
-<com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout
-    android:id="@+id/fabtoolbar"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:containerId="@+id/fabtoolbar_container"
-    app:fabId="@+id/fab"
-    app:fabToolbarId="@+id/fabtoolbar_toolbar"
-    app:fadeInFraction="0.2"
-    app:hideDuration="600"
-    app:horizontalMargin="@dimen/fab_margin"
-    app:showDuration="600"
-    app:verticalMargin="@dimen/fab_margin">
-
-
-    <RelativeLayout
-        android:id="@id/fabtoolbar_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
-            app:borderWidth="0dp"
-            app:fabSize="normal" />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@id/fabtoolbar_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/one"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:scaleType="centerInside"
-            android:src="@drawable/abc_ic_menu_copy_mtrl_am_alpha" />
-
-        <ImageView
-            android:id="@+id/two"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:scaleType="centerInside"
-            android:src="@drawable/abc_ic_menu_paste_mtrl_am_alpha" />
-
-        <ImageView
-            android:id="@+id/three"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:scaleType="centerInside"
-            android:src="@drawable/abc_ic_menu_selectall_mtrl_alpha" />
-
-        <ImageView
-            android:id="@+id/four"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:scaleType="centerInside"
-            android:src="@drawable/abc_ic_menu_cut_mtrl_alpha" />
-
-    </LinearLayout>
-
-</com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout>-->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -98,7 +28,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_search"
-        app:backgroundTint="#2962FF" />
+        app:srcCompat="@android:drawable/ic_search_category_default" />
+
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
